Testing both train, test and original test datasets in both files, and fixed not normalizing original test set

--- a/code/multiclass_classification_linear_scikitlearn.ipynb
+++ b/code/multiclass_classification_linear_scikitlearn.ipynb
@@ -162,7 +162,8 @@
    "source": [
     "# Normalize X_train and X_test (feature scaling)\n",
     "X_train, mean, std = featureNormalization(X_train)\n",
-    "X_test = (X_test - mean) / std"
+    "X_test = (X_test - mean) / std\n",
+    "X_original_test = (X_original_test - mean) / std"
    ]
   },
   {
@@ -251,7 +252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set Accuracy: 0.035629453681710214\n"
+      "Test set Accuracy: 0.03689627870150435\n"
      ]
     }
    ],
